data/derived/fa15/progs/unify/prog2390.ml.out
Characters 50-55:
  let fixpoint (f,b) = wwhile ((let (i, t) = f b in i = b),b);;
                                                    ^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
